language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_call.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    box<T>() {
    }

    foo() {
        box<CupC<R>>();
    }

}
